--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,10 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python
+
+
+# More
+
+media_cdn/
+
+
